manifests/svc2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc2-deployment
  labels:
    app: svc2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: svc2
  template:
    metadata:
      labels:
        app: svc2
    spec:
      containers:
      - name: svc2
        image: hashicorp/http-echo:0.2.3
        args:
        - "-text=Hello from svc2"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: svc2
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: svc2
  type: ClusterIP
